# ZapLink

./: .gitignore  README.md  index.html  package.json  pnpm-lock.yaml  tailwind.config.js
public/: splashscreen.html
src/: App.css  App.tsx  HotkeySettings.tsx  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
