[package]
name = "ZapLink"
version = "0.1.2"
description = "ZapLink is a simple desktop tool that opens valid URLs when Alt+V is pressed."
authors = ["InfiniteL8p"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1", features = [] }

[dependencies]
tauri = { version = "1", features = [ "clipboard-read-text", "global-shortcut-all", "system-tray", "shell-open"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
copypasta = "0.8.0"

[features]
# This feature is used for production builds or when a dev server is not specified, DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
